# mt-rust

./: .gitignore  discMatrixA.txt  discMatrixB.txt  discMatrixC.txt  generate_matrices.py  matrixA.txt  matrixAdisc.txt  matrixB.txt  matrixC.txt  test.txt
frequency/: frequency.py
frequency/csv-reader/: Cargo.toml
frequency/csv-reader/src/: main.rs
md407/: .gitignore  Cargo.toml  expandedmatrix.rs  link.x  matrixA-md407-ref.txt  memory.x  minimal.s19  rtsend  rtshow
md407/.cargo/: config.toml
md407/src/: lib.rs  main.rs
pico/: Cargo.toml  cg.dot  memory.x
pico-rtic2/: Cargo.toml  README.md
pico-rtic2/.cargo/: config.toml
pico-rtic2/src/: lib.rs
pico/.cargo/: config.toml
pico/src/: lib.rs
scripts/: bench_matrix.sh  bench_md407.sh  bench_reaction.sh  concurrency-disc-ref.txt  matrixA-disc-ref.txt  matrixA-md407-ref.txt  results.txt  test.txt
stm32f07/: Cargo.toml  cg.dot  memory.x  rust-toolchain.toml  test.rs
stm32f07/.cargo/: config.toml
stm32f07/src/: lib.rs
test-asm/: Cargo.toml
test-asm/src/: main.rs
