[package]
# TODO fix `authors` and `name` if you didn't use `cargo-generate`
name = "test-app"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6"}
cortex-m-rt = "0.7"
panic-probe = { version = "0.3" }
# TODO(4) Select the correct rtic backend
#cortex-m-rtic = "1.0.0"
# TODO(5) Add hal as dependency
#nrf52840-hal = "0.16.0"
# TODO add a monotonic if you use scheduling
# rtic-monotonics = { version = "1.0.0", features = [ "cortex-m-systick" ]}
rp2040-hal = { version = "0.9.1", features = ["rt", "critical-section-impl"]}
rp-pico = {version = "0.8.0"}
critical-section = { version = "1.0.0" }
embedded-hal = "0.2.7"
rtt-target = { version = "0.3.1" }
panic-semihosting = "0.6.0"

rp2040-boot2 = "0.3.0"
rtic = {version = "2.1.1", features = ["thumbv6-backend"]}
rtic-sync = "1.3.0"
rtic-monotonics = {version = "1.5.0", features = ["rp2040"]}
fugit = "0.3.7"
# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 's' # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
