[package]
# TODO fix `authors` and `name` if you didn't use `cargo-generate`
name = "test-app"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0.0"
panic-probe = { version = "0.3" }
# TODO add a monotonic if you use scheduling
# rtic-monotonics = { version = "1.0.0", features = [ "cortex-m-systick" ]}
#rp2040-hal = { version = "0.9.1", features = ["rt"]}
#rp-pico = {version = "0.8.0"}
stm32f0xx-hal = { version = "0.18", features = ["rt", "stm32f051"]}
embedded-hal = "0.2.7"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-semihosting = "0.6.0"
systick-monotonic = "1.0.1"
cast = "0.3.0"

#rp2040-monotonic = "1.2"
# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 0 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false # <-
incremental = false
opt-level = 3
lto = "fat"# <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

[target.'cfg(all(target_arch = "arm", target_os = "none"))']
# (..)
linker = "flip-link"

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
